# ChangeLog for app-misc/hivex
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/hivex/ChangeLog,v 1.31 2015/02/19 07:41:12 pinkbyte Exp $

  19 Feb 2015; Sergey Popov <pinkbyte@gentoo.org> -hivex-1.3.2-r2.ebuild,
  -hivex-1.3.7-r1.ebuild, -files/autoconf_fix-1.3.2.patch,
  -files/python-test-fix-1.3.2.patch, -files/ruby_runpath_fix-1.3.2.patch,
  -files/1.3.3/0001-Fixed-gnulib-integration-for-hivexml.patch,
  -files/1.3.3/0002-automake.patch,
  -files/1.3.3/0003_autoconf_fix_automagic-1.3.3.patch,
  -files/1.3.3/0004-ruby_runpath_fix-1.3.3.patch,
  -files/1.3.5/0001-add_ocaml_triplet_in_configure.ac.patch,
  -files/1.3.5/0002-add_per_triplet_in_configure.ac.patch,
  -files/1.3.5/0003-fix_python_defenition_configure.ac.patch,
  -files/1.3.5/0004-ruby_runpath_fix-1.3.5.patch,
  -files/1.3.6/0001-add_ocaml_triplet_in_configure.ac.patch,
  -files/1.3.6/0002-add_per_triplet_in_configure.ac.patch,
  -files/1.3.6/0003-fix_python_defenition_configure.ac.patch,
  -files/1.3.6/0004-ruby_runpath_fix-1.3.5.patch,
  -files/1.3.6-r1/disable_automagic_cumulative_patch.patch,
  -files/1.3.6-r1/fix_python_linking.patch,
  -files/1.3.7/0004-ruby_runpath_fix-1.3.5.patch,
  -files/1.3.7/ruby1.9_fix_deprection.patch:
  Security cleanup, wrt bug #490990

  19 Feb 2015; Sergey Popov <pinkbyte@gentoo.org> hivex-1.3.11.ebuild:
  QA: drop base eclass, drop redundant inherit on autotools eclass

  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> hivex-1.3.11.ebuild:
  Stable for x86, wrt bug #490990

  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> hivex-1.3.11.ebuild:
  Stable for amd64, wrt bug #490990

  05 Jan 2015; Hans de Graaff <graaff@gentoo.org> hivex-1.3.7-r1.ebuild,
  hivex-1.3.11.ebuild:
  Depend on dev-ruby/rdoc since virtual/ruby-rdoc is a noop these days.

*hivex-1.3.11 (05 Dec 2014)

  05 Dec 2014; Maxim Koltsov <maksbotan@gentoo.org> +hivex-1.3.11.ebuild: