@@ -2,17 +2,24 @@
 Hash: SHA256
 
 DIST hivex-1.3.11.tar.gz 1264487 SHA256 c63adf6c7ef9140acf20775d35bef35ab563c0d2f59d3dfb8e0d15cfa7c77678 SHA512 1ff9fbcfb976fea5bba41c5ff06e4dc68af0e507accc236ca0406644ee2c865619b3b3bf9550124778fcd782ddc257f1d89861b45f48c0c3ceed18dfa1e02ced WHIRLPOOL 6d741ad14660390b2c171bff400645cbcd20a991a55b7fb4e349c864e2dd4e606f57f344d8b851acf87d12bf8a3b608a77c073c565d9aa55cd23094d7e09e8cd
-EBUILD hivex-1.3.11.ebuild 2210 SHA256 fe0969217d9af0385794bd2b8ab94a7ac9a4975d00f8fb69ce7dd257f0ca4a63 SHA512 8b5a75ea67758ea4f20ac2c695de19d22ae591dba38f4275c4bcccafacdb775481d5cffd7cb775a6875d6ba4c0fc0ae94b87fdd61909c6eb3eee00decfe6cc3b WHIRLPOOL f2c179dcd879ad6c7c5a4ce08d99fd6fbad7909204e6bea68bcddbcd4ecf49f303d1bba128c27a60bd6b6bafce76e4e4eb0e32434ca4f7b8a75bfb051a736bc2
-MISC ChangeLog 7413 SHA256 699186a60774fee4232ce2eb5449af075cc3154f0c3ceb32cce6e11ab4a602e1 SHA512 50d3a78eca88176ae91cd9aa2f0e9bf0d1c87f9a04c0bc0984a2146919a2f0bcd26a56e6065ffed02e22875ff425fca98956e330a785e7212d7da41f9170ef99 WHIRLPOOL 413f0d7f99489664707f49d01853ecbf5ad490bc55c691002810350f11910b8e1c225b022426676289fa20c22167f25dc465ed3e607c4aab9280e5dc3213ff40
+EBUILD hivex-1.3.11-r1.ebuild 2218 SHA256 8acc3fd33870b60cb0d917965c6147339e548dc2f64bf844deefd5f5350c6c90 SHA512 5aa7c398f99bf62d4f3f6b793cdf7700414f510ad945ef97328dbe879ed668e748d3a8f5e8231c5bc8a799f076d61b2443f0b2aadd95050a9fa4a725aede2fff WHIRLPOOL 0e70781743f5f1d7fd891ef459eaa4c1fea3541698f5081366bff37cabf6823ad5033d270745c6e1dd58452909cfba3da2968a8e5ba9abd3b1e62413a4a1ac0d
+EBUILD hivex-1.3.11.ebuild 2206 SHA256 94e7ce08e8564db723ff196b7421bbf4f0192a6cc9b9d016cb33e9a1abadfa17 SHA512 852538ad2d050a1022e2313007a5a756fce3e95196c28739f1f59271df6bcc7bf2e5e953d3d21c7091ba49386e3167b3817345f02415dcf82f38bb6ebc565a1d WHIRLPOOL d6a3163942d45027e56db9e278040e47c131aae70647e1e05a294b384c377a51c1c782b6612cbd0e634f91fe287b7b1e6bf06d484fcf99306bb615c83bac0151
+MISC ChangeLog 7604 SHA256 7660c7472c3542324a65ae5ab3a2a170e3b263cc3bb9a9ee3ab49c6c8194836f SHA512 5f3b71cfa7525bc0bf81debd83dcb8b56c9283a61b3d60c51d2c8f1addf459ec8205d2807cf1f3061cae7c54b483846b188bed12e17d9d4ae2c0cb05627b4e9e WHIRLPOOL d5c6b792b6f424630d540cb0cca4dbc21e0b6c4f4b4b5835d1f36066d486f9ec0a039d0969be9a3d42ae4906f8c95b759f43cc1b5f2ed07fe43de1d5f90f8f15
 MISC metadata.xml 369 SHA256 fbf0c047dd8f31baf2319b73779aa528e5c22283e2eb6f1b68a826e42b7eedc7 SHA512 1588487b3894d396348e5754ae1d9f93a0a7b2e72b87f59c4ce6ec6ae2564b6c7cd7fb40c098009989143412cdd3affbb6a7e07ea10f7955357d1c8b2fb41377 WHIRLPOOL c686ffb6a35eeee66c8316d686b1066fef117b216b264c96a84d21eb8d79718456babc43db707af119c84bf3f99946d64572c32cf5a05ee82b65315448255bd0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJU5ZOYAAoJECo/aRed9267V3kIAKB7pMicKgG1IlAFAWcW/v11
-PGxmkwzkPYBhEB4O+40JAsBvSYidXSPoyBgS7UklORcGS6+mZly7Sa9TYj9qsscf
-wcbS4TEtH8fdK5V3ig+8hjoKm1Q81DyHktSOTjk5jGfpRoC/CiSN/nyLcA8FOkQT
-dsGf2HEe1gX9roKen89NWsvvvAojOpFTqpcMgZvOPyv0D9nebv7JhYz8DcI7IavJ
-kKrUx+ckipu/SonemLwKYkUXHCVmbI4pHHY8V+dE673pN6Y16vDloEmgdMcZJWob
-OiCmFE3nR+5Q5Nwm6eNK/9yaxjmMa4SepRCRtgyvaZcJOpum9joRSAZGaXKBXUw=
-=Z+XR
+iQIcBAEBCAAGBQJVBut0AAoJEKXdFCfdEflKHnkP/RnJXxhQhgjU5iHjm6vqQuj6
+PsEhkgjttKLSfeEYLc4TIBsEt/00V19XkY0xVsNeHLxxHUyVwTS9A1PMUHV/zb15
+c/71sh5PJ93t+XX09iIbF2dHuDCDdzGFyPuAl0RhlIdDlbU5FBxj+VnC8pfS42fR
+vyGsvEg+5s5dp6OFPNspHCaZtEMjNV7fqPmnkryaEEvRXrpQIfkk6KkYSoXcWSqA
+Z5/4NWNmWTnV9tA6pcLFwCFLHZZguIbNjNI3G2PwCS+5k1ygb7caYPERsrxJ0n7b
+wCCJWGaOPalnn9ESk7plxdHRLl9SZiXXw9Zfh65MJ/zCgTee51YKS4pF+JsqT4Aj
+BQlEXK76O4LtflJIvbsLLJhA4WBdLLIqoeojxuQNzDG+whluRk96/0KMxAtNNA9m
+/HJ5Y+PmJnzE1GvlYuAe2ozQYHFDAf9qhVwjJNUwORQTXQ0+XVt5g2GIsTxoB1R3
+aPsloXZFtoQWC1DFQrfZsF+wk0E+1dGKf94TWXcdFuMtIeWl2hsh3joIYfj70l93
+jXmD+JjWbI2qDUbj0paZ7aHW9p7SR4jAUrxwHCApTlSK12SBoyZ0XgylGJV0V0mA
++YUVVTNMxFbE04zI9Shk++quffgZ955eE/vOWkFXBUQ/TzQXfMdobqWySs5Y8WS0
+onnVkvrk7ufY6dBMnLJc
+=P9IR
 -----END PGP SIGNATURE-----
