@@ -1,4 +1,4 @@
 DIST astromenace-src-1.3.2.tar.bz2 55390211 SHA256 9b775df2b157565b97aca008dd879b867cd3377c07b829cee6b5342639357fe6 SHA512 0a06278a8a7fdaaf5c730590fcc1f8f59503fe4c94dcbb6dd6b6ee638048f9bebf7c49c75cd32f26e4cd08cfbe01f5082002860901b7196f08a55712bb3ed5d4 WHIRLPOOL b5dee8d3cef2f143e44730c2eb0a60e3537675499c7c726752fc016faace498bf9a951bf96fb03ff2b3e3b8699d9f0575cb5e39ceacceb01a0c270c21691aa1f
-EBUILD openastromenace-1.3.2.ebuild 1688 SHA256 7b6d884b69685c4960e0a6d55a6723bc0455e5b5ef17b794359ad599c0739bcf SHA512 ea55fb534e4f99eddb46356f44569dbb044478acd9187baf559aab601ce54c69daa501e96efa509d7a49692cc30d708e2bafac95ce532a4e663a512984e355be WHIRLPOOL 7fed760545e465916bbcd9d52154336954aa5f42862e2623c2ec2f9192d146c1227bb5b8d5c15b9b338533b7fccd38bf6431c81ba01fedc146ea9bc79bcbb58e
-MISC ChangeLog 3962 SHA256 5ce0adf8b0a90bdf568ca5a650d1c9692d3806b3f936cc6a62e8fff737988f38 SHA512 33bef2519569c8bd7b1706391469e28aa24f462fcdca80748e67f454093f0f4cf73e574f1e5fa295c212097b66b7f728562cc604d49898b182351c52791f794e WHIRLPOOL 894d43fc82b05626d54fd86e2c9850f5a5cd816a8a6d9a3f86b8e3e8721096481beafddcded026ef7fe9e528ce7ddc1bed0ae3dfd3740dd92394ba4bbed2086b
+EBUILD openastromenace-1.3.2.ebuild 1721 SHA256 f6293b258687ce91c1b465dfe2fb089627dc9affd0bda1ed8c258377052e9842 SHA512 c3a6be32b9487b2545c8fa12e32340e3ee1d48ebcd385de705f3a408ff4db3a65a58acfd47f41e477b3166aa205c322ca8c0f03a6e7d7c43d8090aa90d429829 WHIRLPOOL d891c91c0199def1ed2ea6fb9109b21d798d1ac7c3ff177f07ae972bd51f04fe2e91af7d181f0cd4cb811c3b1ea814e7d99b3a4215f891dbe62711832280ff27
+MISC ChangeLog 4097 SHA256 55ee25bcfcb0dd136928aa601e2371f9e19fb78b652ba4413909802b23984812 SHA512 a97a82a565eaba440645c79659a575aa10c2b26215ec1f7fc4db6eeea884bcb62e082dc6cfd5a3fce85f6436bd6059a8865b30fe85ea818f71388653264cb579 WHIRLPOOL 9f7344c0e0363070413af2d3b59c38b0f4487a8c11916dd4733ee9e9084c6dc579ae867f6414d72967fbaca6d817b3717e86d479b66571ffe2c256c8af6b09fa
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
