@@ -9,12 +9,25 @@ DIST smplayer-14.9.0.tar.bz2 3716434 SHA256 429ad4edd6df1fcedd5ea4fa2b024eb5a61c
 EBUILD smplayer-14.3.0.ebuild 2156 SHA256 bcae6caed7f025bf9cdf96c5b352ea06a6b6c93e8474d2e7e8351779e553f052 SHA512 1e5cd636d3f5c204702b871274ebbfc25d2073a7a2208474e409094688cfc58d887a382d0c057426e4828d45a5b8cac95ebb204e33e2228117634f661c056587 WHIRLPOOL cf99299f71a139bb7e6ff7ca1811b2175d97d33f8bbd8e0479ab9118659c0f6c4af1f96535f7d4954fb0bdc716160429a00dd582507eff6b42cf913a350a1ba3
 EBUILD smplayer-14.9.0-r1.ebuild 2490 SHA256 c056216c5ac57e8ef40dfd9896206272a2c4a0268aa82d52f0468765c1911d91 SHA512 6cef8e864077062de8b1c1eca6b7ec5433453f6bd108db1c031fa8f09ae18ccd62401e8eed175e6c1c0a9030e3820bf535aae75c82d5b782c2d2dfc11a417c62 WHIRLPOOL 54c2534e27226ebe20505d65b4c57dfc6e995da472070ab6b758e79ec5662be15851d8cc45bd97ffc6682ffebedaf6d0d388f444367f8927b59646e653fc41f9
 EBUILD smplayer-14.9.0.6690-r1.ebuild 3054 SHA256 49f380065c96aeac87142e51a3434c4b9233f32a7142e3db5d43245b9e771009 SHA512 ce4199e9f8c5b240c72747466eab6e8d94f70511698eff6c455b27db4acfc92623abce814a0637c3307cf7f457db7f222e3f3d379c1d82df40cae3326a25ce21 WHIRLPOOL 2363a4af583704dcc8b60a1a453ecfde4a6d0c9e117b0bc7bce6cb6a9916c089fc13c9afe548860dcaa97873f8ca74f8e33c730e28868f009a4aaf180d15f895
-MISC ChangeLog 22149 SHA256 d27aa3b19122676c4f5302ebf6e6e0772e3d6091ec20eccb5df8ce9b4a845de9 SHA512 08b18e847cf33713776fc964f62e12363f415ae8abca247632a5c1b455ba77120d3a404d68cdb4c2a6549350a4f8476aaee1d427812ca29de2bef46a234bf586 WHIRLPOOL 228d30cd7dc6cc0206030bc95f9904338a543073c096134c7e022dec24db423faa29c7ff7786ca6afdeb46b9ba3cf5eaf0fd8467e2fd849c2c34ef16dd13ad27
+EBUILD smplayer-14.9.0.6690-r2.ebuild 3205 SHA256 9f94d97840475d46ed48a9aea71499c698fe6bfbb29e3f565b1504b10ea2b68d SHA512 c4928c8353d4be3629d6ebbe64488aae04969baf7c0cb6c1def36d7781cc393599595787f1dcec6b4c99635f249efaaa601071c14eb13c59c53065a28c6535de WHIRLPOOL 5e09df35f962da7dcf31ac9632efec51fee6aa5d8ff8ff19b090994f230da9f1ab60b0604478dee7b01e9f4fab4086f10e3c351ce4c7f45158554135c9f09f3d
+MISC ChangeLog 22341 SHA256 22dd33051cd81e4e3e16509f101fa43aa776b49cdbc9944297b6e6d6fc07688b SHA512 2b1e67096a87ff891505cd1386ad55fa7b2abe1a4044c2f1bb5e701022743e2d18e094a8db8af3b3b02ef9e9875a41fc57b11b41227046c3783f4f02f8c5b80f WHIRLPOOL cca25acd2bc204037c9929b153a543e8e306aa3c17a909f71ea361dd57b06b2d7e12246bf4de036e217861e07a1acc86240c7fdd724a04f6d1cd51ef78aa3d53
 MISC metadata.xml 505 SHA256 ca8bb6982e46f56f34350483c91999e947f0d30aae50bdb75dc7f8fba8e76e1b SHA512 18a3dbf2bea045c321945434a0933468d27b40cc0984d0c439a6726b25cbf978c9f9886aa09f7dbfa6c0176477095e5c5ddec4267ce52478cc92d053f0697f18 WHIRLPOOL dd5ae89b730a16d4531adc640df01b4d01fad68d8b7018f35e7dfefff3dd30c36cb6d2b3e8ff6d0332de8e639ea850985d5388435744dcbdff8f255822d4e0c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlUBTjQACgkQVWmRsqeSphOZWQCeKO39e3o9diFEFufzU/c8FgD/
-9ZMAn3DhptEG8B6kvcEINSsjUTfjfvxL
-=tH8W
+iQJ8BAEBCABmBQJVBu6yXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOV34P/iBukP3Dk8WoZiEfQ9qBfZ+P
+hFJOh0EtDVz2YgON8Qmv+2Aweq9vUBl03vgOJadJx4UykiLpMr/i1NimqB9lq/UB
+RRd9ItROmggywUPjxqwX2RpI/9eVG4ytNK8S3Xc8c6gCnAAL5AgX3TqRduJYhCFt
+qlAjr7Ta5R8kwdt7o39Gjj2dlbW94A8Xmdbv7XxcjSEJYVww6/V4vLLeRsnxiO7B
+V+47bR/cQT1yFOBJH78S9xwZj77fkGIwK6+ckpDebAoBi6Ffr7vVGCwy00EhW/nA
+HJmeGpjVu9UHQw4ffmq0Q6lvmK5zvNRrZTT8NxkhooFKATYFvlhdr1J/LbZMYT9+
+cWR6E7FLKczdXpjmzGgKjfKJ6kQN2yAJNhAGOo0xKk9aITM6uuwQ/3/4aY6/tVTS
+/tyXhoUs8H1tyXBMyC8lW7+Pbxfj7bW0KpQAW6MNckIMofckoDCnG3Hw2TlQrnPs
+K8qSOe1SmiEEbUO29KCjWJF2Xd2nd1YCJ/RF3kspkQl/fbLGIqIitNyINbQiONpu
+fhJm711PurJQflpmxLcAJpB4erZQYovaOyoh6l1qLafOmkJxExsYdqzoitA5Bfef
+xTZQLAkD0YylyFJ41kknUT+aUA5lPqQAC4Zx5zLxJm7nmSueQj9Se6tT+dUSKDog
+L/on2QcrLHEejU/tVp0h
+=SRNv
 -----END PGP SIGNATURE-----
