@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=virtual/libiconv virtual/libintl dev-libs/libxml2:2 ocaml? ( dev-lang/ocaml[ocamlopt] dev-ml/findlib[ocamlopt] ) readline? ( sys-libs/readline ) perl? ( dev-perl/IO-stringy ) ruby? ( ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ) python? ( python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] ) dev-lang/perl perl? ( test? ( dev-perl/Pod-Coverage dev-perl/Test-Pod-Coverage ) ) ruby_targets_ruby20? ( ruby? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( ruby? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby20? ( ruby? ( dev-ruby/rdoc[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( ruby? ( dev-ruby/rdoc[ruby_targets_ruby21] ) ) dev-lang/perl[-build(-)]
+DESCRIPTION=Library for reading and writing Windows Registry 'hive' binary files
+EAPI=5
+HOMEPAGE=http://libguestfs.org
+IUSE=ocaml readline +perl python test static-libs ruby elibc_FreeBSD ruby_targets_ruby20 ruby_targets_ruby21 python_targets_python3_3 python_targets_python3_4 python_targets_python2_7 python_single_target_python3_3 python_single_target_python3_4 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=LGPL-2.1
+RDEPEND=virtual/libiconv virtual/libintl dev-libs/libxml2:2 ocaml? ( dev-lang/ocaml[ocamlopt] dev-ml/findlib[ocamlopt] ) readline? ( sys-libs/readline ) perl? ( dev-perl/IO-stringy ) ruby? ( ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ) python? ( python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] ) dev-lang/perl[-build(-)]
+REQUIRED_USE=python? ( )
+SLOT=0
+SRC_URI=http://libguestfs.org/download/hivex/hivex-1.3.11.tar.gz
+_eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	autotools-utils	3727db64c7b960903d5033280f108080	eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-app	8886390eb1ac390b27350184fd3eb32f	perl-module	7a1c6bac46bba968758a2f7666af645b	python-single-r1	f782db6207752efeca1d59c016d8c813	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	unpacker	f300a7ca9131b1024a79762e8edd3c52	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=d2e3ebadfc18f986e190dacd11e421f2
