@@ -9,4 +9,4 @@ RDEPEND=games-misc/games-envd
 SLOT=0
 SRC_URI=mirror://sourceforge/openastromenace/1.3.2/astromenace-src-1.3.2.tar.bz2
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	games	1ad3205dbf62a2c98249f2f59b0a2d39	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=89e3fbdff3a33329cdbbb31e24ce1f8a
+_md5_=ca7374c3fc0afb10ae819fbfe47248ca
