@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 autoshutdown? ( dev-qt/qtdbus:4 ) ) qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtscript:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 autoshutdown? ( dev-qt/qtdbus:5 ) )
+DESCRIPTION=Great Qt GUI front-end for mplayer/mpv
+EAPI=5
+HOMEPAGE=http://smplayer.sourceforge.net/
+IUSE=autoshutdown bidi debug qt4 qt5 streaming linguas_ar linguas_ar_SY linguas_bg linguas_ca linguas_cs linguas_da linguas_de linguas_el_GR linguas_en_GB linguas_en_US linguas_es linguas_et linguas_eu linguas_fi linguas_fr linguas_gl linguas_he_IL linguas_hr linguas_hu linguas_it linguas_ja linguas_ka linguas_ko linguas_ku linguas_lt linguas_mk linguas_ms_MY linguas_nl linguas_pl linguas_pt linguas_pt_BR linguas_ro_RO linguas_ru_RU linguas_sk linguas_sl_SI linguas_sq_AL linguas_sr linguas_sv linguas_th linguas_tr linguas_uk_UA linguas_vi_VN linguas_zh_CN linguas_zh_TW
+KEYWORDS=~amd64 ~arm ~hppa ~x86 ~x86-fbsd ~amd64-linux
+LICENSE=GPL-2 BSD
+RDEPEND=qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 autoshutdown? ( dev-qt/qtdbus:4 ) ) qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtscript:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 autoshutdown? ( dev-qt/qtdbus:5 ) ) || ( >=media-video/mpv-0.6.2[libass,X] media-video/mplayer[bidi?,libass,png,X] ) streaming? ( >=media-video/mpv-0.6.2[libass,X] >=net-misc/youtube-dl-2014.11.26 qt4? ( dev-qt/qtcore:4[ssl] ) qt5? ( dev-qt/qtnetwork:5[ssl] ) )
+REQUIRED_USE=^^ ( qt4 qt5 )
+SLOT=0
+SRC_URI=mirror://sourceforge/smplayer/smplayer-14.9.0.6690.tar.bz2
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
+_md5_=ff6e39a994e54f87d4711c501c5b1919
