@@ -1,6 +1,10 @@
 # ChangeLog for games-action/openastromenace
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/openastromenace/ChangeLog,v 1.21 2013/12/31 07:37:35 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/openastromenace/ChangeLog,v 1.22 2015/03/16 14:51:45 mr_bones_ Exp $
+
+  16 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org>
+  openastromenace-1.3.2.ebuild:
+  add user-requested epatch_user (bug #542930)
 
   31 Dec 2013; Michael Sterrett <mr_bones_@gentoo.org>
   -files/openastromenace-1.2.0-cmake.patch,
