@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/hivex
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/hivex/ChangeLog,v 1.31 2015/02/19 07:41:12 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hivex/ChangeLog,v 1.32 2015/03/16 14:40:42 zerochaos Exp $
+
+*hivex-1.3.11-r1 (16 Mar 2015)
+
+  16 Mar 2015; Rick Farina <zerochaos@gentoo.org> +hivex-1.3.11-r1.ebuild,
+  hivex-1.3.11.ebuild:
+  ebuild is still pretty bad, but at least it builds again
 
   19 Feb 2015; Sergey Popov <pinkbyte@gentoo.org> -hivex-1.3.2-r2.ebuild,
   -hivex-1.3.7-r1.ebuild, -files/autoconf_fix-1.3.2.patch,
